--- a/platformio.ini
+++ b/platformio.ini
@@ -27,4 +27,4 @@ board_build.psram_type = opi
 check_tool = cppcheck, clangtidy
 
 ;Debug
-build_flags = -DCORE_DEBUG_LEVEL=5
+;build_flags = -DCORE_DEBUG_LEVEL=5
